fix: layout shift when opening menu (#530)

--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -76,6 +76,13 @@ a:hover {
   --rsbs-bg: theme(colors.gray.900);
 }
 
+/* Fix react-remove-scroll layout shift on Windows and friends */
+@supports (scrollbar-gutter: stable) {
+  :root body[data-scroll-locked] {
+    margin: 0 !important;
+  }
+}
+
 :root {
   --system-fonts: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -87,6 +94,7 @@ a:hover {
   --text-2xl: 1.424rem;
   --text-3xl: 1.602rem;
   --text-4xl: 1.802rem;
+  overflow: auto;
 
   /* React Spring Bottom Sheet */
   --rsbs-bg: theme(colors.gray.100);
